@@ -6,6 +6,7 @@ Version 1.0.5
 * Fix rollingball not killing Lara under certain movement angles.
 * Fix discrepancies between statistics and save / load game time units.
 * Fix draw key incorrectly working in binoculars / lasersight mode.
+* Fix FLAME_EMITTER_3 not burning player.
 
 
 Version 1.0.4
